feat: update exercise types and refactor fetch strategies; add new utility classes and mappers